Fix pre-deployment blockers: CORS, CSP, secrets, HTTPS, Terraform
- Consolidate CORS into single property-driven config (app.cors.allowed-origins)
- Update all 4 CORS config points to use injected property
- Make CSP headers environment-aware with dynamic buildCspPolicy()
- Remove @CrossOrigin annotations from 25 controllers
- Enable HTTPS listeners in staging and production Terraform
- Add Secrets Manager resource and pass all secrets to ECS containers
- Add container_environment variable to ECS module for non-secret env vars
- Add environment.staging.ts to .gitignore